--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -27,34 +27,42 @@
 
 
 <?import eu.hansolo.medusa.Gauge?>
+<?import javafx.scene.layout.GridPane?>
 <StackPane fx:controller="com.mbcoder.iot.weatherstation.Controller" xmlns:fx="http://javafx.com/fxml"
-             VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity">
-    <VBox fx:id="windowsVBox">
-        <!--        <top>-->
-        <HBox fx:id="hBox"  alignment="CENTER" spacing="5">
+           VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity">
+
+    <GridPane fx:id="gridPane">
+        <HBox fx:id="hBox"  alignment="CENTER" spacing="5" GridPane.rowIndex="0" GridPane.columnIndex="0">
             <CheckBox fx:id="chkSimulated" text="Simulated" selected="true"/>
             <Button fx:id="btnConnectSensor" onAction="#handleSensorConnectButton" text="Connect sensor"/>
             <Button fx:id="btnLogWeather" onAction="#startWeatherLogging" text="Log weather"/>
         </HBox>
-        <!--        </top>-->
+<!--        <VBox fx:id="windowsVBox" GridPane.rowIndex="0" GridPane.columnIndex="0">-->
+            <!--        <top>-->
 
-        <!--    <left>-->
-        <HBox >
-            <Label fx:id="labelTemp" text="..." alignment="CENTER" />
-<!--            <Gauge fx:id="tempGauge" skinType="LCD" lcdFont="DIGITAL" lcdDesign="RED_DARKRED" title="Temperature" unit="°C"/>-->
-        </HBox>
-        <!--    </left>-->
-        <!--    <right>-->
-        <HBox>
-            <Label fx:id="labelPressure" text="..."/>
-<!--            <Gauge fx:id="pressureGauge" skinType="LCD" title="Pressure" unit="mB" lcdCrystalEnabled="true" lcdVisible="true" maxMeasuredValue="2000" maxValue="2000" maxWidth="Infinity"-->
-<!--                   lcdDesign="BLUE_LIGHTBLUE" lcdFont="DIGITAL" sectionIconsVisible="true" sectionsVisible="true"/>-->
-        </HBox>
-        <!--    </right>-->
+            <!--        </top>-->
 
-        <!--        <bottom>-->
+            <!--    <left>-->
+<!--            <HBox >-->
+<!--                <Label fx:id="labelTemp" text="..." alignment="CENTER" />-->
+<!--                &lt;!&ndash;            <Gauge fx:id="tempGauge" skinType="LCD" lcdFont="DIGITAL" lcdDesign="RED_DARKRED" title="Temperature" unit="°C"/>&ndash;&gt;-->
+<!--            </HBox>-->
+            <!--    </left>-->
+            <!--    <right>-->
+<!--            <HBox>-->
+<!--                <Label fx:id="labelPressure" text="..."/>-->
+                <!--            <Gauge fx:id="pressureGauge" skinType="LCD" title="Pressure" unit="mB" lcdCrystalEnabled="true" lcdVisible="true" maxMeasuredValue="2000" maxValue="2000" maxWidth="Infinity"-->
+                <!--                   lcdDesign="BLUE_LIGHTBLUE" lcdFont="DIGITAL" sectionIconsVisible="true" sectionsVisible="true"/>-->
+<!--            </HBox>-->
+            <!--    </right>-->
 
-    </VBox>
+            <!--        <bottom>-->
+
+<!--        </VBox>-->
+<!--        <Label text="This is a weather station reading" GridPane.rowIndex="1" GridPane.columnIndex="1"/>-->
+
+    </GridPane>
+
 
             <!--Controls box-->
 <!--            <VBox fx:id="vBox" StackPane.alignment="BOTTOM_CENTER" maxWidth="Infinity" maxHeight="Infinity" styleClass="panel-region">-->
