--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2021 Esri.
+  ~ Copyright 2023 Esri.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
   ~ use this file except in compliance with the License. You may obtain a copy of
@@ -18,6 +18,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.geometry.Insets?>
+<?import eu.hansolo.medusa.Gauge?>
+
 <StackPane fx:controller="com.mbcoder.iot.weatherstation.Controller" xmlns:fx="http://javafx.com/fxml"
            VBox.vgrow="ALWAYS">
     <VBox StackPane.alignment="CENTER">
@@ -25,13 +27,34 @@
             <Insets topRightBottomLeft="25"/>
         </padding>
         <VBox fx:id="vBox" alignment="CENTER"/>
-        <GridPane fx:id="gridPane" maxWidth="Infinity" StackPane.alignment="CENTER">
+        <GridPane maxWidth="Infinity" StackPane.alignment="CENTER">
             <padding>
                 <Insets topRightBottomLeft="25"/>
             </padding>
+            <Gauge fx:id="humidityGauge" GridPane.rowIndex="0" GridPane.columnIndex="0"
+                   skinType="LCD"
+                   maxWidth="Infinity"
+                   maxHeight="75"
+                   prefWidth="250"
+                   prefHeight="100"
+                   title="Humidity"
+                   lcdDesign="GRAY_PURPLE"
+                   oldValueVisible="false"
+                   maxMeasuredValueVisible="false"
+                   minMeasuredValueVisible="false"
+                   unit="\%" />
+            <Gauge fx:id="digitalTempGauge" GridPane.rowIndex="0" GridPane.columnIndex="1"
+                   skinType="LCD"
+                   maxWidth="Infinity"
+                   maxHeight="75"
+                   prefWidth="250"
+                   prefHeight="100"
+                   title="Temperature"
+                   lcdDesign="GRAY_PURPLE"
+                   oldValueVisible="false"
+                   maxMeasuredValueVisible="false"
+                   minMeasuredValueVisible="false"
+                   unit="ºC"/>
         </GridPane>
     </VBox>
 </StackPane>
-
-
-
